// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility routes DELETE /feeds/tags should remove existing feed tags filters 1`] = `
Array [
  Object {
    "tag": "html",
    "userId": "1",
  },
]
`;

exports[`compatibility routes GET /feeds/publications should return feed publications filters 1`] = `
Array [
  Object {
    "enabled": false,
    "publicationId": "b",
    "userId": "1",
  },
  Object {
    "enabled": false,
    "publicationId": "c",
    "userId": "1",
  },
]
`;

exports[`compatibility routes GET /feeds/tags should return feed tags filters 1`] = `
Array [
  Object {
    "tag": "html",
    "userId": "1",
  },
  Object {
    "tag": "javascript",
    "userId": "1",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return anonymous feed filtered by sources 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p2",
  },
  Object {
    "id": "p4",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return anonymous feed filtered by tags 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return anonymous feed filtered by tags and sources 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p4",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return anonymous feed with no filters ordered by popularity 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p2",
  },
]
`;

exports[`compatibility routes GET /posts/latest should return preconfigured feed when logged-in 1`] = `
Array [
  Object {
    "id": "p4",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes GET /posts/publication should return single source feed 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p2",
  },
]
`;

exports[`compatibility routes GET /posts/tag should return single tag feed 1`] = `
Array [
  Object {
    "id": "p5",
  },
  Object {
    "id": "p4",
  },
  Object {
    "id": "p1",
  },
]
`;

exports[`compatibility routes POST /feeds/publications should add new feed publications filters 1`] = `
Array [
  Object {
    "enabled": false,
    "publicationId": "a",
    "userId": "1",
  },
  Object {
    "enabled": false,
    "publicationId": "b",
    "userId": "1",
  },
]
`;

exports[`compatibility routes POST /feeds/publications should remove existing feed publications filters 1`] = `
Array [
  Object {
    "enabled": false,
    "publicationId": "c",
    "userId": "1",
  },
]
`;

exports[`compatibility routes POST /feeds/tags should add new feed tags filters 1`] = `
Array [
  Object {
    "tag": "html",
    "userId": "1",
  },
  Object {
    "tag": "javascript",
    "userId": "1",
  },
]
`;

exports[`mutation addFiltersToFeed should add the new feed settings 1`] = `
Object {
  "addFiltersToFeed": Object {
    "blockedTags": Array [
      "golang",
    ],
    "excludeSources": Array [
      Object {
        "id": "a",
        "image": "http://image.com/a",
        "name": "A",
        "public": true,
      },
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "javascript",
      "webdev",
    ],
    "userId": "1",
  },
}
`;

exports[`mutation addFiltersToFeed should ignore duplicates 1`] = `
Object {
  "addFiltersToFeed": Object {
    "blockedTags": Array [
      "golang",
    ],
    "excludeSources": Array [
      Object {
        "id": "a",
        "image": "http://image.com/a",
        "name": "A",
        "public": true,
      },
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
      Object {
        "id": "c",
        "image": "http://image.com/c",
        "name": "C",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "html",
      "javascript",
      "webdev",
    ],
    "userId": "1",
  },
}
`;

exports[`mutation addFiltersToFeed should ignore non existing sources 1`] = `
Object {
  "addFiltersToFeed": Object {
    "blockedTags": Array [],
    "excludeSources": Array [
      Object {
        "id": "a",
        "image": "http://image.com/a",
        "name": "A",
        "public": true,
      },
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "javascript",
      "webdev",
    ],
    "userId": "1",
  },
}
`;

exports[`mutation disableArticleTypeFromFeed should remove the unwanted article type for filtering 1`] = `
Object {
  "disableArticleTypeFromFeed": Object {
    "articleTypeId": "tm",
    "feedId": "1",
  },
}
`;

exports[`mutation enableArticleTypeFromFeed should add the unwanted article type for filtering 1`] = `
Object {
  "enableArticleTypeFromFeed": null,
}
`;

exports[`mutation removeFiltersFromFeed should remove existing filters 1`] = `
Object {
  "removeFiltersFromFeed": Object {
    "blockedTags": Array [],
    "excludeSources": Array [
      Object {
        "id": "c",
        "image": "http://image.com/c",
        "name": "C",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "html",
    ],
    "userId": "1",
  },
}
`;

exports[`query anonymousFeed should remove banned posts from the feed 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by tags 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by tags and sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed v2 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed while excluding sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6NA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed with no filters ordered by popularity 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed with no filters ordered by time 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
    ],
    "pageInfo": Object {
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should safetly handle a case where the feed is empty 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
  },
}
`;

exports[`query authorFeed should return a single author feed 1`] = `
Object {
  "authorFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should remove banned posts from the feed 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should remove deleted posts from the feed 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return feed v2 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return feed with preconfigured filters 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with blocked tags filters only 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with no filters 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with sources filters only 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6NA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with tags and blocked tags filters 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6Mw==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with tags filters only 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MTA=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return unread posts from preconfigured feed 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6Mw==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feedSettings should return the feed settings 1`] = `
Object {
  "feedSettings": Object {
    "blockedTags": Array [
      "golang",
    ],
    "excludeSources": Array [
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
      Object {
        "id": "c",
        "image": "http://image.com/c",
        "name": "C",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "html",
      "javascript",
    ],
    "userId": "1",
  },
}
`;

exports[`query keywordFeed should return a single keyword feed 1`] = `
Object {
  "keywordFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostDiscussedFeed should return a most discussed feed 1`] = `
Object {
  "mostDiscussedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MTU=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostUpvotedFeed should return a most upvoted feed 1`] = `
Object {
  "mostUpvotedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostUpvotedFeed should return a most upvoted feed of the month 1`] = `
Object {
  "mostUpvotedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query searchPostSuggestions should return search suggestions 1`] = `
Object {
  "searchPostSuggestions": Object {
    "hits": Array [
      Object {
        "title": "<strong>P1</strong>",
      },
    ],
    "query": "p1",
  },
}
`;

exports[`query searchPosts should return search empty feed 1`] = `
Object {
  "searchPosts": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
    "query": "not found",
  },
}
`;

exports[`query searchPosts should return search feed 1`] = `
Object {
  "searchPosts": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "hasNextPage": false,
    },
    "query": "p1",
  },
}
`;

exports[`query sourceFeed should return a single source feed 1`] = `
Object {
  "sourceFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "url": "http://p2.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6Nw==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query tagFeed should return a single tag feed 1`] = `
Object {
  "tagFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query tagsCategories should return a list of article types disabled based on user preference 1`] = `
Object {
  "articleTypes": Object {
    "types": Array [
      Object {
        "disabled": true,
        "id": "tm",
        "title": "Tech magazines",
      },
      Object {
        "disabled": false,
        "id": "rn",
        "title": "Release notes",
      },
      Object {
        "disabled": false,
        "id": "n-ec",
        "title": "Non-editorial content",
      },
      Object {
        "disabled": false,
        "id": "cb",
        "title": "Company blogs",
      },
      Object {
        "disabled": false,
        "id": "ce",
        "title": "Code examples",
      },
    ],
  },
}
`;

exports[`query tagsCategories should return a list of article types having disabled as null being anonymous user 1`] = `
Object {
  "articleTypes": Object {
    "types": Array [
      Object {
        "disabled": null,
        "id": "tm",
        "title": "Tech magazines",
      },
      Object {
        "disabled": null,
        "id": "n-ec",
        "title": "Non-editorial content",
      },
      Object {
        "disabled": null,
        "id": "rn",
        "title": "Release notes",
      },
      Object {
        "disabled": null,
        "id": "ce",
        "title": "Code examples",
      },
      Object {
        "disabled": null,
        "id": "cb",
        "title": "Company blogs",
      },
    ],
  },
}
`;

exports[`query tagsCategories should return a list of categories with a property of a string array as tags 1`] = `
Object {
  "tagsCategories": Object {
    "categories": Array [
      Object {
        "emoji": "🌈",
        "id": "FE",
        "tags": Array [
          "html",
          "javascript",
        ],
        "title": "Frontend",
      },
      Object {
        "emoji": "⚙️",
        "id": "BE",
        "tags": Array [
          "golang",
          "javascript",
        ],
        "title": "Backend",
      },
    ],
  },
}
`;
